Github workflow for trigerring the csm release
Signed-off-by: meghana_gm <meghana.gm@dell.com>

--- a/.github/workflows/trigger-auto-csm-release-workflow.yaml
+++ b/.github/workflows/trigger-auto-csm-release-workflow.yaml
@@ -7,7 +7,7 @@
 #  http://www.apache.org/licenses/LICENSE-2.0
 
 # Trigger workflow for auto release of CSM projects
-name: Trigger Auto Release Workflow
+name: Trigger Release of CSM Drivers and Modules
 
 on:
   workflow_dispatch:
