Github workflow for trigerring the csm release
Signed-off-by: meghana_gm <meghana.gm@dell.com>

--- a/.github/workflows/trigger-auto-csm-release-workflow.yaml
+++ b/.github/workflows/trigger-auto-csm-release-workflow.yaml
@@ -36,6 +36,8 @@ jobs:
             "dell/karavi-authorization"
             "dell/karavi-resiliency"
             "dell/karavi-observability"
+            "dell/karavi-metrics-powerflex"
+            "dell/karavi-topology"
           ]
 
     steps:
