--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -46,41 +46,44 @@ jobs:
     needs: build-and-scan
     runs-on: ubuntu-latest
     steps:
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
-      - name: Get Docker Token
-        id: get_token
-        run: |          
-          TOKEN=$(curl -s -u "${{ secrets.DOCKERHUB_USERNAME }}:${{ secrets.DOCKERHUB_PASSWORD }}" "https://auth.docker.io/token?service=registry.docker.io&scope=repository:dellemc/${{ github.event.inputs.image }}:pull,push" | jq -r '.token')
-          echo "::set-output name=token::$TOKEN"
-
-      - name: Get Docker Manifest
-        run: |
-          curl -s -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" -H "Accept: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/dellemc/${{ github.event.inputs.image }}/manifests/nightly > manifest.json
-          cat manifest.json
-
-      - name: Push Docker Manifest
-        run: |
-          curl -XPUT -s -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" -H "Content-type: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/dellemc/${{ github.event.inputs.image }}/manifests/v${{ github.event.inputs.version }} -d '@manifest.json'
-
-      - name: Log in to Quay
-        run: echo "${{ secrets.QUAY_PASSWORD }}" | docker login quay.io -u "${{ secrets.QUAY_USERNAME }}" --password-stdin
-
-      - name: Get Quay Token
-        id: get_quay_token
-        run: |
-          TOKEN=$(curl -s -u "${{ secrets.QUAY_USERNAME }}:${{ secrets.QUAY_PASSWORD }}" "https://quay.io/v2/auth?service=quay.io&scope=repository:delltech/csm/${{ github.event.inputs.image }}:pull,push" | jq -r '.token')
-          echo "::set-output name=token::$TOKEN"
+#      - name: Log in to Docker Hub
+#        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+#
+#      - name: Get Docker Token
+#        id: get_token
+#        run: |
+#          TOKEN=$(curl -s -u "${{ secrets.DOCKERHUB_USERNAME }}:${{ secrets.DOCKERHUB_PASSWORD }}" "https://auth.docker.io/token?service=registry.docker.io&scope=repository:dellemc/${{ github.event.inputs.image }}:pull,push" | jq -r '.token')
+#          echo "::set-output name=token::$TOKEN"
+#
+#      - name: Get Docker Manifest
+#        run: |
+#          curl -s -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" -H "Accept: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/dellemc/${{ github.event.inputs.image }}/manifests/nightly > manifest.json
+#          cat manifest.json
+#
+#      - name: Push Docker Manifest
+#        run: |
+#          curl -XPUT -s -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" -H "Content-type: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/dellemc/${{ github.event.inputs.image }}/manifests/v${{ github.event.inputs.version }} -d '@manifest.json'
 
       - name: Get Quay Manifest
+        id: get_quay_manifest
         run: |
-          curl -s -H "Authorization: Bearer ${{ steps.get_quay_token.outputs.token }}" -H "Accept: application/vnd.docker.distribution.manifest.v2+json" https://quay.io/v2/delltech/csm/${{ github.event.inputs.image }}/manifests/nightly > manifest.json
-          cat manifest.json
+          SHA=$(curl --location --request GET 'https://quay.io/api/v1/repository/delltech/csm/${{ github.event.inputs.image }}/tag?specificTag=nightly | jq -r '.manifest_digest')' \
+          --header 'Content-Type: application/json' \
+          --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }} '
+          echo "::set-output name=sha::$SHA"
+          echo ${{SHA}}
 
 #      - name: Push Quay Manifest
+#        env:
+#          REPO: "delltech/csm/"${{ github.event.inputs.image }}
+#          TARGET_TAG: ${{ github.event.inputs.version }}
 #        run: |
-#          curl -XPUT -s -H "Authorization: Bearer ${{ steps.get_quay_token.outputs.token }}" -H "Content-type: application/vnd.docker.distribution.manifest.v2+json" https://quay.io/v2/delltech/csm${{ github.event.inputs.image }}/manifests/v${{ github.event.inputs.version }} -d '@manifest.json'
+#          curl --location --request PUT 'https://quay.io/api/v1/repository/${{ REPO }}/tag/${{ TARGET_TAG }}' \
+#          --header 'Content-Type: application/json' \
+#          --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
+#          --data-raw '{
+#          "manifest_digest": ${{ steps.get_quay_manifest.outputs.sha }}
+#          }'
 
 #  create-release:
 #    name: Create Release
