--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -30,68 +30,74 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.23"
-
-      - name: Install dependencies
-        run: go mod tidy
-
-      # TODO: build binaries
-      - name: Build
-        run: go build -v ./...
-
-      - name: Run malware scan
-        uses: dell/common-github-actions/malware-scanner@main
-        with:
-          directories: .
-          options: -ri
-
-      - name: Run gosec
-        uses: dell/common-github-actions/gosec-runner@main
-        with:
-          directories: "./..."
+#      - name: Set up Go
+#        uses: actions/setup-go@v5
+#        with:
+#          go-version: "1.23"
+#
+#      - name: Install dependencies
+#        run: go mod tidy
+#
+#      # TODO: build binaries
+#      - name: Build
+#        run: go build -v ./...
+#
+#      - name: Run malware scan
+#        uses: dell/common-github-actions/malware-scanner@main
+#        with:
+#          directories: .
+#          options: -ri
+#
+#      - name: Run gosec
+#        uses: dell/common-github-actions/gosec-runner@main
+#        with:
+#          directories: "./..."
 
       # TODO: run gofmt, go vet, and linting
 
   push-images:
-    name: Pull, Tag and Push Images
+    name: Release images to Dockerhub and Quay
     needs: build-and-scan
     runs-on: ubuntu-latest
     steps:
-      - name: Image name
-        run: echo "Image name:" "${{ inputs.image }}"
-    #  - name: Log in to Quay.io
-    #    run: echo "${{ secrets.QUAY_PASSWORD }}" | docker login quay.io -u "${{ secrets.QUAY_USERNAME }}" --password-stdin
+      #      - name: Log in to Docker Hub
+      #        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      #
+      #      - name: Get Docker Token
+      #        id: get_token
+      #        run: |
+      #          TOKEN=$(curl -s -u "${{ secrets.DOCKERHUB_USERNAME }}:${{ secrets.DOCKERHUB_PASSWORD }}" "https://auth.docker.io/token?service=registry.docker.io&scope=repository:dellemc/${{ github.event.inputs.image }}:pull,push" | jq -r '.token')
+      #          echo "::set-output name=token::$TOKEN"
+      #
+      #      - name: Get Docker Manifest
+      #        run: |
+      #          curl -s -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" -H "Accept: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/dellemc/${{ github.event.inputs.image }}/manifests/nightly > manifest.json
+      #          cat manifest.json
+      #
+      #      - name: Push Docker Manifest
+      #        run: |
+      #          curl -XPUT -s -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" -H "Content-type: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/dellemc/${{ github.event.inputs.image }}/manifests/v${{ github.event.inputs.version }} -d '@manifest.json'
 
-    #  - name: Log in to Docker Hub
-    #    run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login docker.io -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      - name: Get Quay Manifest
+        id: get_quay_manifest
+        run: |
+          SHA=$(curl --location --request GET 'https://quay.io/api/v1/repository/delltech/csm/${{ github.event.inputs.image }}/tag?specificTag=nightly | jq -r '.manifest_digest')' \
+          --header 'Content-Type: application/json' \
+          --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }} '
+          echo "::set-output name=sha::$SHA"
+          echo ${{ SHA }}
 
-    #  - name: Pull nightly image from Quay.io
-    #    run: docker pull quay.io/dell/container-storage-modules/${{ inputs.image }}:nightly
-
-    #  - name: Retag image for Quay.io
-    #    run: |
-    #      docker tag quay.io/dell/container-storage-modules/${{ inputs.image }}:nightly quay.io/dell/container-storage-modules/${{ inputs.image }}:v${{ inputs.version }}
-          
-    #      docker tag quay.io/dell/container-storage-modules/${{ inputs.image }}:nightly quay.io/dell/container-storage-modules/${{ inputs.image }}:latest
-
-    #  - name: Retag image for Docker Hub
-    #    run: |
-    #      docker tag quay.io/dell/container-storage-modules/${{ inputs.image }}:nightly dellemc/${{ inputs.image }}:v${{ inputs.version }}
-
-    #      docker tag quay.io/dell/container-storage-modules/${{ inputs.image }}:nightly dellemc/${{ inputs.image }}:latest
-
-    #  - name: Push ${{ inputs.version }} and latest tag to Quay.io
-    #    run: |
-    #      docker push quay.io/dell/container-storage-modules/${{ inputs.image }}:v${{ inputs.version }}
-    #      docker push quay.io/dell/container-storage-modules/${{ inputs.image }}:latest
-
-    #  - name: Push ${{ inputs.version }} and latest tag to Docker Hub
-    #    run: |
-    #      docker push dellemc/${{ inputs.image }}:v${{ inputs.version }}
-    #      docker push dellemc/${{ inputs.image }}:latest
+  #      - name: Push Quay Manifest
+  #        env:
+  #          REPO: "delltech/csm/"${{ github.event.inputs.image }}
+  #          TARGET_TAG: ${{ github.event.inputs.version }}
+  #        run: |
+  #          curl --location --request PUT 'https://quay.io/api/v1/repository/${{ REPO }}/tag/${{ TARGET_TAG }}' \
+  #          --header 'Content-Type: application/json' \
+  #          --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
+  #          --data-raw '{
+  #          "manifest_digest": ${{ steps.get_quay_manifest.outputs.sha }}
+  #          }'
 
   create-release:
     name: Create Release
