--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -80,9 +80,10 @@ jobs:
       - name: Get Quay Manifest
         id: get_quay_manifest
         run: |
-          SHA=$(curl -s -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }} "https://quay.io/api/v1/repository/delltech/csm/${{ github.event.inputs.image }}/tag?specificTag=nightly" | jq -r '.manifest_digest')
+          SHA=$(curl -s -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}" "https://quay.io/api/v1/repository/delltech/csm/${{ github.event.inputs.image }}/tag?specificTag=nightly" | jq -r '.manifest_digest')
           echo "::set-output name=sha::$SHA"
-          echo ${{ SHA }}
+          echo $SHA
+
 
   #      - name: Push Quay Manifest
   #        env:
