--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -13,13 +13,13 @@ name: Release CSM Drivers and Modules
 on:
   workflow_call:
 #  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to release (major, minor, patch), example: 2.2.0'
-        required: true
-      image:
-        description: 'Image name, example: csi-powerstore'
-        required: true
+#    inputs:
+#      version:
+#        description: 'Version to release (major, minor, patch), example: 2.2.0'
+#        required: true
+#      image:
+#        description: 'Image name, example: csi-powerstore'
+#        required: true
 
 jobs:
   build-and-scan:
