udpated secrets inheritance

--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -12,6 +12,7 @@ name: Release CSM Drivers and Modules
 # Invocable as a reusable workflow
 on:
   workflow_call:
+    secrets: inherit
   workflow_dispatch:
     inputs:
       version:
