updated push command

--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -83,17 +83,17 @@ jobs:
           SHA=$(curl -s --location --request GET 'https://quay.io/api/v1/repository/delltech/csm/${{ github.event.inputs.image }}/tag?specificTag=nightly' --header 'Content-Type: application/json' --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' | jq -r '.tags[0].manifest_digest')
           echo "::set-output name=sha::$SHA"
 
-  #      - name: Push Quay Manifest
-  #        env:
-  #          REPO: "delltech/csm/"${{ github.event.inputs.image }}
-  #          TARGET_TAG: ${{ github.event.inputs.version }}
-  #        run: |
-  #          curl --location --request PUT 'https://quay.io/api/v1/repository/${{ REPO }}/tag/${{ TARGET_TAG }}' \
-  #          --header 'Content-Type: application/json' \
-  #          --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
-  #          --data-raw '{
-  #          "manifest_digest": ${{ steps.get_quay_manifest.outputs.sha }}
-  #          }'
+      - name: Push Quay Manifest
+        env:
+          REPO: "delltech/csm/${{ github.event.inputs.image }}"
+          TARGET_TAG: ${{ github.event.inputs.version }}
+        run: |
+          curl --location --request PUT 'https://quay.io/api/v1/repository/$REPO/tag/$TARGET_TAG' \
+          --header 'Content-Type: application/json' \
+          --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
+          --data-raw '{
+          "manifest_digest": ${{ steps.get_quay_manifest.outputs.sha }}
+          }'
 
 #  create-release:
 #    name: Create Release
