--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -15,10 +15,10 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version to release (major, minor, patch), example: 2.2.0'
+        description: "Version to release (major, minor, patch), example: 2.2.0"
         required: true
       image:
-        description: 'Image name, example: csi-powerstore'
+        description: "Image name, example: csi-powerstore"
         required: true
 
 jobs:
@@ -29,108 +29,95 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v4
 
-#      - name: Set up Go
-#        uses: actions/setup-go@v5
-#        with:
-#          go-version: "1.23"
-#
-#      - name: Install dependencies
-#        run: go mod tidy
-#
-#      # TODO: build binaries
-#      - name: Build
-#        run: go build -v ./...
-#
-#      - name: Run malware scan
-#        uses: dell/common-github-actions/malware-scanner@main
-#        with:
-#          directories: .
-#          options: -ri
-#
-#      - name: Run gosec
-#        uses: dell/common-github-actions/gosec-runner@main
-#        with:
-#          directories: "./..."
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.23"
 
-      # TODO: run gofmt, go vet, and linting
+      - name: Install dependencies
+        run: go mod tidy
+
+      # TODO: build binaries if any like dellctl, repctl etc.
+      - name: Build
+        run: go build -v ./...
 
   push-images:
     name: Release images to Dockerhub and Quay
     needs: build-and-scan
     runs-on: ubuntu-latest
     steps:
-      #      - name: Log in to Docker Hub
-      #        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-      #
-      #      - name: Get Docker Token
-      #        id: get_token
-      #        run: |
-      #          TOKEN=$(curl -s -u "${{ secrets.DOCKERHUB_USERNAME }}:${{ secrets.DOCKERHUB_PASSWORD }}" "https://auth.docker.io/token?service=registry.docker.io&scope=repository:dellemc/${{ github.event.inputs.image }}:pull,push" | jq -r '.token')
-      #          echo "::set-output name=token::$TOKEN"
-      #
-      #      - name: Get Docker Manifest
-      #        run: |
-      #          curl -s -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" -H "Accept: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/dellemc/${{ github.event.inputs.image }}/manifests/nightly > manifest.json
-      #          cat manifest.json
-      #
-      #      - name: Push Docker Manifest
-      #        run: |
-      #          curl -XPUT -s -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" -H "Content-type: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/dellemc/${{ github.event.inputs.image }}/manifests/v${{ github.event.inputs.version }} -d '@manifest.json'
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+      - name: Get Docker Token
+        id: get_token
+        run: |
+          TOKEN=$(curl -s -u "${{ secrets.DOCKERHUB_USERNAME }}:${{ secrets.DOCKERHUB_PASSWORD }}" "https://auth.docker.io/token?service=registry.docker.io&scope=repository:dellemc/${{ github.event.inputs.image }}:pull,push" | jq -r '.token')
+          echo "::set-output name=token::$TOKEN"
+
+      - name: Get Docker Manifest
+        run: |
+          curl -s -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" -H "Accept: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/dellemc/${{ github.event.inputs.image }}/manifests/nightly > manifest.json
+          cat manifest.json
+
+      - name: Push Docker Manifest
+        run: |
+          curl -XPUT -s -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" -H "Content-type: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/dellemc/${{ github.event.inputs.image }}/manifests/v${{ github.event.inputs.version }} -d '@manifest.json'
 
       - name: Get Quay Manifest
         id: get_quay_manifest
         run: |
           SHA=$(curl -s --location --request GET 'https://quay.io/api/v1/repository/delltech/csm/${{ github.event.inputs.image }}/tag?specificTag=nightly' --header 'Content-Type: application/json' --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' | jq -r '.tags[0].manifest_digest')
           echo "::set-output name=sha::$SHA"
-          echo "SHA: $SHA"
 
       - name: Push Quay Manifest
         run: |
-          curl --location --request PUT 'https://quay.io/api/v1/repository/delltech/csm/${{ github.event.inputs.image }}/tag/${{ github.event.inputs.version }}' \
+          echo "secret-key: ${{secrets.QUAY_API_TOKEN}}"
+          curl -s --location --request PUT 'https://quay.io/api/v1/repository/delltech/csm/${{ github.event.inputs.image }}/tag/v${{ github.event.inputs.version }}' \
           --header 'Content-Type: application/json' \
           --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
           --data-raw '{
-          "manifest_digest": ${{ steps.get_quay_manifest.outputs.sha }}
+            "manifest_digest": "${{ steps.get_quay_manifest.outputs.sha }}"
           }'
 
-#  create-release:
-#    name: Create Release
-#    needs: push-images
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v4
-#
-#      - name: Create new tag
-#        run: |
-#          git config --global user.name 'github-actions'
-#          git config --global user.email 'github-actions@github.com'
-#          git tag v${{ inputs.version }}
-#          git push origin v${{ inputs.version }}
-#
-#      # TODO: attach built binaries to the release
-#      - name: Create Release
-#        id: release_notes
-#        uses: softprops/action-gh-release@v2
-#        with:
-#          tag_name: v${{ inputs.version }}
-#          name: Release v${{ inputs.version }}
-#          draft: true
-#          prerelease: false
-#          generate_release_notes: true
-#          make_latest: true
-#          body: |
-#            ## Documentation
-#            [General Documentation](https://dell.github.io/csm-docs/docs/)
-#
-#            ### Change Log
-#            See the [CHANGELOG](https://github.com/dell/csm/blob/release-v1.12.0/CHANGELOG/CHANGELOG-1.12.0.md) for more details.
-#        env:
-#            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#
-#      - name: Create release branch
-#        run: |
-#          git config --global user.name 'github-actions'
-#          git config --global user.email 'github-actions@github.com'
-#          git checkout -b release/v${{ inputs.version }}
-#          git push origin release/v${{ inputs.version }}
+  create-release:
+    name: Create Release
+    needs: push-images
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Create new tag
+        run: |
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
+          git tag v${{ inputs.version }}
+          git push origin v${{ inputs.version }}
+
+      # TODO: attach built binaries to the release (if any like repctl, dellctl etc.)
+      - name: Create Release
+        id: release_notes
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ inputs.version }}
+          name: Release v${{ inputs.version }}
+          draft: true
+          prerelease: false
+          generate_release_notes: true
+          make_latest: true
+          body: |
+            ## Documentation
+            [General Documentation](https://dell.github.io/csm-docs/docs/)
+
+            ### Change Log
+            See the [CHANGELOG](https://github.com/dell/csm/blob/release-v1.12.0/CHANGELOG/CHANGELOG-1.12.0.md) for more details.
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create release branch
+        run: |
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
+          git checkout -b release/v${{ inputs.version }}
+          git push origin release/v${{ inputs.version }}
