--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Get Quay Manifest
         id: get_quay_manifest
-        run: |
+        run: | # TODO: Change delltech/csm to our production repo
           SHA=$(curl -s --location --request GET 'https://quay.io/api/v1/repository/delltech/csm/${{ github.event.inputs.image }}/tag?specificTag=nightly' --header 'Content-Type: application/json' --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' | jq -r '.tags[0].manifest_digest')
           echo "::set-output name=sha::$SHA"
 
