updated job name

--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -81,7 +81,7 @@ jobs:
           }'
 
   create-release:
-    name: Create Release
+    name: Create release and branch
     needs: push-images
     runs-on: ubuntu-latest
     steps:
