--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -12,13 +12,14 @@ name: Release CSM Drivers and Modules
 # Invocable as a reusable workflow
 on:
   workflow_call:
-  workflow_dispatch:
     inputs:
       version:
         description: "Version to release (major, minor, patch). Example: 1.x.x"
+        type: string
         required: true
       image:
         description: "Image name. Example: csi-powerstore"
+        type: string
         required: true
 
 jobs:
@@ -52,26 +53,26 @@ jobs:
       - name: Get Docker Token
         id: get_token
         run: |
-          TOKEN=$(curl -s -u "${{ secrets.DOCKERHUB_USERNAME }}:${{ secrets.DOCKERHUB_PASSWORD }}" "https://auth.docker.io/token?service=registry.docker.io&scope=repository:dellemc/${{ github.event.inputs.image }}:pull,push" | jq -r '.token')
+          TOKEN=$(curl -s -u "${{ secrets.DOCKERHUB_USERNAME }}:${{ secrets.DOCKERHUB_PASSWORD }}" "https://auth.docker.io/token?service=registry.docker.io&scope=repository:dellemc/${{ inputs.image }}:pull,push" | jq -r '.token')
           echo "::set-output name=token::$TOKEN"
 
       - name: Get Docker Manifest
         run: |
-          curl -s -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" -H "Accept: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/dellemc/${{ github.event.inputs.image }}/manifests/nightly > manifest.json
+          curl -s -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" -H "Accept: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/dellemc/${{ inputs.image }}/manifests/nightly > manifest.json
 
       - name: Push Docker Manifest
         run: |
-          curl -XPUT -s -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" -H "Content-type: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/dellemc/${{ github.event.inputs.image }}/manifests/v${{ github.event.inputs.version }} -d '@manifest.json'
+          curl -XPUT -s -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" -H "Content-type: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/dellemc/${{ inputs.image }}/manifests/v${{ inputs.version }} -d '@manifest.json'
 
       - name: Get Quay Manifest
         id: get_quay_manifest
         run: |
-          SHA=$(curl -s --location --request GET 'https://quay.io/api/v1/repository/dell/container-storage-modules/${{ github.event.inputs.image }}/tag?specificTag=nightly' --header 'Content-Type: application/json' --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' | jq -r '.tags[0].manifest_digest')
+          SHA=$(curl -s --location --request GET 'https://quay.io/api/v1/repository/dell/container-storage-modules/${{ inputs.image }}/tag?specificTag=nightly' --header 'Content-Type: application/json' --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' | jq -r '.tags[0].manifest_digest')
           echo "::set-output name=sha::$SHA"
 
       - name: Push Quay Manifest
         run: |
-          curl -s --location --request PUT 'https://quay.io/api/v1/repository/dell/container-storage-modules/${{ github.event.inputs.image }}/tag/v${{ github.event.inputs.version }}' \
+          curl -s --location --request PUT 'https://quay.io/api/v1/repository/dell/container-storage-modules/${{ inputs.image }}/tag/v${{ inputs.version }}' \
           --header 'Content-Type: application/json' \
           --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
           --data-raw '{
