enabled commit signing

--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -46,7 +46,18 @@ jobs:
         with:
           directories: .
           options: -ri
-
+      - name: Set up GPG
+        run: |
+            echo "$GPG_PRIVATE_KEY" | gpg --import
+            echo "$GPG_PRIVATE_KEY" | gpg --import-ownertrust
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+    
+      - name: Configure Git to sign commits
+        run: |
+            git config --global user.signingkey ${{ secrets.GPG_KEY_ID }}
+            git config --global commit.gpgSign true
+    
       - name: Create new tag
         run: |
           git config --global user.name 'github-actions'
