--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -17,9 +17,7 @@ on:
       version:
         description: 'Version to release (major, minor, patch), ex: 1.0.0'
         required: true
-        # TODO: remove default from here and caller workflows in goclients
-        default: 'none'
-
+        type: string
 jobs:
   build-and-scan:
     name: Build, Scan and Release
@@ -37,33 +35,31 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.23"
-      # - name: Install dependencies
-      #   run: go mod tidy
-      # - name: Build
-      #   run: go build -v ./...
-      # - name: Run malware scan
-      #   uses: dell/common-github-actions/malware-scanner@main
-      #   with:
-      #     directories: .
-      #     options: -ri
-      # - name: Set up GPG
-      #   run: |
-      #       echo "$GPG_PRIVATE_KEY" | gpg --import
-      #       echo "$GPG_PRIVATE_KEY" | gpg --import-ownertrust
-      #   env:
-      #     GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-    
-      # - name: Configure Git to sign commits
-      #   run: |
-      #       git config --global user.signingkey ${{ secrets.GPG_KEY_ID }}
-      #       git config --global commit.gpgSign true
-          # Needed for signing commits using Github App tokens
-      # See: https://github.com/peter-evans/create-pull-request/blob/main/docs/concepts-guidelines.md#commit-signing
-      - uses: actions/create-github-app-token@v1.11.0
-        id: generate-token
+      - name: Install dependencies
+        run: go mod tidy
+      - name: Build
+        run: go build -v ./...
+      - name: Run malware scan
+        uses: dell/common-github-actions/malware-scanner@main
         with:
-          app-id: ${{ vars.CSM_RELEASE_APP_ID }}
-          private-key: ${{ secrets.CSM_RELEASE_APP_PRIVATE_KEY }}
+          directories: .
+          options: -ri
+
+      - name: Import GPG key
+        uses: crazy-max/ghaction-import-gpg@v6
+        with:
+            gpg_private_key: ${{ secrets.CSM_RELEASE_APP_PRIVATE_KEY }}
+            git_user_signingkey: true
+            git_commit_gpgsign: true
+            git_tag_gpgsign: true
+            git_config_global: true
+    
+      - name: Create new tag
+        run: |
+            git tag -s -a v${{ github.event.inputs.version }} -m "Release v${{ github.event.inputs.version }}"
+            git push origin v${{ github.event.inputs.version }}
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.CSM_RELEASE_APP_PRIVATE_KEY }}
 
       - name: Create new tag
         run: |
